[package]
name = "http-test-client"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
lambda_http = "0.13.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
openssl = { version = "0.10.35", features = ["vendored"] }
aws-sdk-kinesis = "1.51.0"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
serde = "1.0.215"
serde_json = "1.0"
bincode = "1.3.3"
aws-smithy-runtime-api = "1.7.3"
chrono = "0.4.39"
